# singularity-memory

./: .gitignore  .siftignore  AGENTS.md  ARCHITECTURE.md  LICENSE  MIGRATION.md  NOTICE  README.md  STANDALONE.md  TODO.md  docker-compose.yaml  go.mod  go.sum  openapi.json  pyproject.toml
.github/workflows/: ci.yml
cmd/operations-memory-go/: main.go
docker/operations-memory/: Dockerfile
docker/postgres-vchord/: Dockerfile
docker/singularity-memory-go/: Dockerfile
docs/: AGENTS.md  DESIGN.md  FRONTEND.md  GO_RUNTIME.md  HERMES.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RECORDS_KEEPER.md  RELIABILITY.md  SECURITY.md  STANDALONE_CONTRACT.md  STANDALONE_DEPLOYMENT.md
docs/design-docs/: AGENTS.md  core-beliefs.md  index.md
docs/exec-plans/: AGENTS.md  tech-debt-tracker.md
docs/migration/: CUTOVER_RUNBOOK.md  DEBATE_SYNTHESIS.md  GO_CHARM_EXECUTION_PLAN.md  PARITY_CONTRACT.md  RESEARCH_SYNTHESIS.md
docs/product-specs/: AGENTS.md  index.md  new-user-onboarding.md
docs/records/: AGENTS.md  index.md
docs/references/: design-system-reference-llms.txt  nixpacks-llms.txt  uv-llms.txt
eval-workspace/memory-recall/: PARITY-REPORT.md
extensions/hermes/: README.md  plugin.yaml  provider.py
extensions/mcp/: README.md
extensions/openclaw/: README.md  package.json
go/: README.md  go.mod
internal/config/: config.go  config_test.go
internal/embed/: embed.go  embed_test.go
internal/extract/: extract_test.go
internal/httpapi/: agent.go  agent_test.go  banks.go  brain.go  brain_test.go  chunk.go  context_packet.go  mcp_test.go  mcp_tools.go  memories.go  memories_test.go  openapi.go  openapi_test.go  recall.go  recall_test.go  server.go  server_test.go  worker_endpoints.go
internal/llm/: client.go
internal/mcp/: README.md  handlers.go  server.go  server_test.go  tools.go  types.go
internal/modelrouter/: router.go
internal/rerank/: rerank.go  rerank_test.go
internal/retrieve/: graph.go  retrieve.go  rrf.go  temporal.go
internal/storageprofile/: profile_test.go
internal/store/: agent.go  banks.go  brain.go  (+7 more)
scripts/: backfill-embeddings.sh  ci-db-setup.sh  dump-openapi.py
src/: AGENTS.md
tests/: AGENTS.md
(+120 files in other folders)
