[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singularity-memory"
version = "0.2.0"
description = "Singularity Memory: standalone MCP+HTTP memory server (and Hermes plugin) with VectorChord, BM25, and RRF fusion"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "mhugo"}]
keywords = ["memory", "mcp", "ai", "agents", "rag", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "psycopg[binary]>=3.1,<4",
    "psycopg-pool>=3.1,<4",
    "pydantic>=2,<3",
    "fastapi>=0.115,<1",
    "google-genai>=1.0,<2",
    "uvicorn>=0.32,<1",
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "httpx>=0.28,<1",
    "numpy>=1.26,<3",
    "pgvector>=0.3,<1",
    "openai>=1.100,<3",
    "opentelemetry-api>=1.28,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.28,<2",
    "opentelemetry-exporter-prometheus>=0.49b0,<1",
    "opentelemetry-sdk>=1.28,<2",
    "python-dateutil>=2.9,<3",
    "python-dotenv>=1.0,<2",
    "tiktoken>=0.8,<1",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov>=4"]
mcp = ["mcp>=1.0", "fastmcp>=2.0,<3"]

[project.scripts]
singularity-memory = "singularity_memory.server_cli:main"

[project.urls]
Homepage = "https://github.com/singularity-ng/singularity-memory"
Repository = "https://github.com/singularity-ng/singularity-memory"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "singularity_memory*",
    "singularity_memory_server*",
    "singularity_memory_client*",
    "singularity_memory_client_api*",
]

[tool.setuptools.package-data]
singularity_memory_server = ["py.typed", "alembic/**/*", "alembic/script.py.mako"]
singularity_memory_client = ["py.typed"]
singularity_memory_client_api = ["py.typed"]
